# ImageProcResearch

./: Analysing the BeanOCart data.pptx  CMakeCache.txt  CMakeLists.txt  DisplayImage.cpp  FileLooperDavid.cpp  Makefile  README.md  attempt1.cpp  attempt2.cpp  attempt3.cpp  attempt4  attempt4.cpp  cmake_install.cmake  completeProg  completeProg.cpp  imageCrop.cpp  methodOne  methodOne.cpp  notes.txt
