cmake_minimum_required(VERSION 2.8)
project( methodOne )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( methodOne methodOne.cpp )
add_executable( attempt4 attempt4.cpp )
target_link_libraries( methodOne ${OpenCV_LIBS} )
target_link_libraries( attempt4 ${OpenCV_LIBS} )
